Formulario contacto terminado, enlace de menú mejorada

--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,12 @@
 .col {
-   padding-top: .75rem;
-   padding-bottom: .75rem;
-   background-color: aquamarine;
-   border: 1px solid black;
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
+  background-color: aquamarine;
+  border: 1px solid black;
+}
+.container{
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center; 
 }
