--- a/css/style.css
+++ b/css/style.css
@@ -4,20 +4,22 @@
   box-sizing: border-box;
 }
 body {
-  background: rgba(97, 74, 74, 0.765);
+  background: rgba(44, 43, 35, 0.491);
 }
 .col {
   padding-top: 0.75rem;
   padding-bottom: 0.75rem;
   /* border: 1px solid black; */
 }
-.formulario {
-  height: 100vh;
+.form {
+  margin-top: 100px;
+  width: 100%;
+  height: 100%;
   display: flex;
-  justify-content: center;
-  align-items: center;
+  flex-direction: column;
+  /* justify-content: center; */
 }
-.carta {
+.titulo-carta {
   padding: 1rem;
   display: flex;
   justify-content: center;
@@ -39,17 +41,16 @@ body {
   width: 130px;
   height: 130px;
 }
-.footer{
+.footer {
   width: 220px;
   display: flex;
- align-items: center;
+  align-items: center;
   justify-content: center;
 }
-.item{
+.item {
+  height: 100%;
   background-color: rgba(53, 32, 7, 0.824);
   width: 100%;
   color: bisque;
-margin-top: 10px;
+  margin-top: 10px;
 }
-
-
