--- a/css/style.css
+++ b/css/style.css
@@ -5,19 +5,25 @@
 }
 body {
   background: rgba(44, 43, 35, 0.491);
+  font-family: Georgia, "Times New Roman", Times, serif;
 }
 .col {
   padding-top: 0.75rem;
   padding-bottom: 0.75rem;
-  /* border: 1px solid black; */
+}
+.titulo-contacto {
+  margin-top: 50px;
+  padding: 1rem;
+  display: flex;
+  justify-content: center;
+  font-family: Georgia, "Times New Roman", Times, serif;
 }
 .form {
-  margin-top: 10px;
+  margin-top: 50px;
   width: 500px;
   height: 100%;
   display: flex;
   flex-direction: column;
-  /* justify-content: center; */
 }
 .titulo-carta {
   padding: 1rem;
@@ -39,11 +45,29 @@ body {
   width: 100%;
   max-height: 300px;
 }
-
+h5 {
+  text-align: center;
+}
+.card-body {
+  padding: 10px 10px;
+  text-align: justify;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+}
+.pieCard {
+  padding: 10px;
+  background-color: rgba(101, 58, 5, 0.292);
+  border-radius: 5px;
+}
 .carousel-inner {
   height: 200px;
 }
 @media (min-width: 550px) {
+  .card-img-top {
+    height: 250px;
+  }
+
   .titulohome {
     display: flex;
     justify-content: center;
@@ -70,10 +94,6 @@ body {
     flex-direction: column;
     align-items: center;
   }
-}
-
-.letter {
-  font-family: Georgia, "Times New Roman", Times, serif;
 }
 #logonegro {
   width: 130px;
